--- a/bard/inc/about/css/about-page.css
+++ b/bard/inc/about/css/about-page.css
@@ -192,6 +192,85 @@ html {
 	margin-right: 3%;
 }
 
+
+/* TODO: News Magazine X Theme Installation (remove later) */
+.newsx-theme-banner {
+	display: flex;
+	align-items: flex-start;
+	gap: 30px;
+	position: relative;
+	border: 1px solid #efefef;
+	margin: 40px 0;
+}
+
+.newsx-theme-banner .image-wrap {
+	position: relative;
+	border-right: 1px solid #efefef;
+}
+
+.newsx-theme-banner .image-wrap a {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+}
+
+.newsx-theme-banner .image-wrap:hover a {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.newsx-theme-banner .image-wrap a .dashicons {
+	font-size: 20px;
+	line-height: 20px;
+}
+
+.newsx-theme-banner .newsx-theme-info {
+	position: sticky;
+	top: 0;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	max-width: 500px;
+}
+
+.newsx-theme-banner .newsx-theme-info h2 {
+	font-size: 28px;
+	margin-bottom: 35px;
+	font-weight: bold;
+}
+
+.newsx-theme-banner .newsx-theme-info p {
+	font-size: 14px;
+	margin-bottom: 10px;
+	margin-top: 0;
+}
+
+.newsx-theme-banner .newsx-theme-buttons {
+	display: flex;
+	gap: 10px;
+	margin-top: 20px;
+}
+
+.newsx-theme-banner .newsx-theme-buttons .button {
+	display: inline-flex;
+	align-items: center;
+	gap: 5px;
+	padding: 10px 20px;
+	font-size: 14px;
+	font-weight: 600;
+}
+
+#wpfooter {
+	display: none;
+}
+
+
+/* Predefined Styles */
 .predefined-styles {
 	margin-top: 0;
 }
